# illiad

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  database.sqlite  database.sqlite-shm  database.sqlite-wal  illiad.service  illiadrc
data/the-ancient-city/: info.toml
src/: main.rs  models.rs
src/api/: controllers.rs  routes.rs
src/database/: schema.rs
src/models/: account.rs  audiobook.rs  position.rs
src/utils/: cli.rs  error.rs
