[package]
name = "illiad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
# rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
rocket_sync_db_pools = "0.1.0-rc.2"
sqlx = { version = "0.5", features = ["sqlite"] }
serde = "1.0.152"
serde_json = "1.0.93"
tokio = "1.25.0"
dotenv = "0.15.0"
toml = "0.7.2"
crc32fast = "1.3.2"
futures = "0.3.26"
flate2 = "1.0.25"
tar = "0.4.38"
rand = "0.8.5"
